message module added & docs updated
